// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Main Information should return information of John Doe 1`] = `
<article
  className="sc-eCApnc jSiOnL"
>
  <div
    className="sc-cxNHIi ivfhdD"
  >
    <header
      className="sc-efHYUO fpvvik"
    >
      Journalist
    </header>
    <h1
      className="sc-gXfVKN dmdmNL"
    >
      John
       
      Doe
    </h1>
    <div
      className="sc-iIgjPs ercSyr"
    >
       
      <p>
        test 2
      </p>
       
    </div>
    <a
      className="sc-bdnxRM cxVKJa"
      href="https://drive.google.com/file/d/1pJKHQ54QYnRS4p8uWf2LaOsALSNy3jFs/view?usp=sharing"
      target="_blank"
    >
      Télécharger mon CV
    </a>
  </div>
</article>
`;

exports[`Main Information should return information of Paul Couthouis 1`] = `
<article
  className="sc-eCApnc jSiOnL"
>
  <div
    className="sc-cxNHIi ivfhdD"
  >
    <header
      className="sc-efHYUO fpvvik"
    >
      Développeur Front-End
    </header>
    <h1
      className="sc-gXfVKN dmdmNL"
    >
      Paul
       
      Couthouis
    </h1>
    <div
      className="sc-iIgjPs ercSyr"
    >
       
      <p>
        test 1
      </p>
       
    </div>
    <a
      className="sc-bdnxRM fpHZtF"
      href="https://drive.google.com/file/d/1pJKHQ54QYnRS4p8uWf2LaOsALSNy3jFs/view?usp=sharing"
      target="_blank"
    >
      Télécharger mon CV
    </a>
  </div>
</article>
`;
